--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 # remappings["@chainlink/contracts/="]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/chainlink-brownie-contracts"]
+	path = lib/chainlink-brownie-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
